--- a/backend_PetCareBENag_272/src/main/resources/application.yml
+++ b/backend_PetCareBENag_272/src/main/resources/application.yml
@@ -15,12 +15,12 @@ server:
 spring:
   datasource:
            driver-class-name: org.postgresql.Driver
-           url: jdbc:postgresql://3.92.222.200:8127/postgres
+           url: jdbc:postgresql://3.92.222.200:5434/postgres
            password: password
            username: postgres
   liquibase:
     change-log: classpath:db/liquibase_changelog.xml
-    enabled: true
+    enabled: false
   servlet:
     multipart:
       enabled: false
